# predictosaurus

./: CHANGELOG.md  Cargo.toml  README.md  pixi.toml
.github/: dependabot.yml
.github/workflows/: release-please.yml  rust.yml
resources/templates/: paths.html.tera  paths.vl.json.tera
src/: annotation.rs  cli.rs  graph.rs  main.rs  transcription.rs
src/graph/: beam_search.rs  duck.rs  hgvs.rs  mod.rs  node.rs  paths.rs  peptide.rs  score.rs  transcript.rs
src/impact/: mod.rs
src/show/: mod.rs
src/translation/: amino_acids.rs  mod.rs
src/translation/distance/: epstein.rs  grantham.rs  miyata.rs  mod.rs  sneath.rs
src/utils/: bcf.rs  fasta.rs  mod.rs
tests/resources/: ENSP00000355304.gff3  Homo_sapiens.GRCh38.112.chromosome.6.gff3  SRR702070_A.bcf  SRR707191_A.bcf  SRR707191_SRR702070_called.bcf  alignment-properties.json  calls.bcf  test_calls.vcf  test_headers.vcf  test_observations.vcf
