[package]
name = "predictosaurus"
version = "0.7.4"
description = "Uncertainty aware haplotype based genomic variant effect prediction"
license = "MIT"
authors = ["Felix Wiegand <felix.wiegand@tu-dortmund.de>", "Johannes Köster <johannes.koester@tu-dortmund.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_derive = "4.5.3"
rust-htslib = "0.49.0"
bio = "2.3.0"
anyhow = "1.0.100"
varlociraptor = "8.9.2"
petgraph = { version = "0.8.3", features = ["serde-1"]}
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
json5 = "1.3.0"
colored = "3"
duckdb = { version = "1.4.3", features = ["bundled"]}
tera = "1.20.1"
csv = "1.4.0"
log = "0.4.29"
rayon = "1.11.0"
env_logger = "0.11.6"

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
lto = "fat"

[lints.rust]
unused = "allow"

